--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.0",
+        "php-webdriver/webdriver": "^1.14",
         "tcg/voyager": "^1.5"
     },
     "require-dev": {
